Fixed some alignment issues with the navigation bar

--- a/style.css
+++ b/style.css
@@ -27,21 +27,28 @@
 }
 
 .options,
-.navigation,
-.user {
+.options > * {
     display: flex;
+    padding:10px;
 }
 
 .navigation {
-    
+    justify-content: right;
+    align-items: right;
+    width:500px;
 }
 
-.user {
+.navigation > * {
+    margin-left:15px;
+    margin-right:15px;
+}
+
+.user > * {
     background-color:beige;
+    justify-content:center;
+    align-items: center;
     height:fit-content;
     width:fit-content;
-}
-
-.signin {
-    
+    margin-left:10px;
+    margin-right:10px;
 }
